# trainer

./: .gitignore  CMakeLists.txt  README.md  trenv
client/: select_option.sh
client/config/: tbdsn.tbr  trainer.cfg
solutions/: CMakeLists.txt  problem.desc.md  solution_1.cc  solution_2.cc  solution_3.cc  solution_4.cc  solution_5.cc  solutions.h  tables.desc.md
solutions/framework/: CMakeLists.txt  main.cc  runner.cc  runner.h  sharer.cc  sharer.h  solutions.h  table.h
solutions/solutions/: CMakeLists.txt  solution_1.cc  solution_2.cc  solution_3.cc  solution_4.cc  solution_5.cc
src/: CMakeLists.txt
src/client/: builder.py  command.py  communicator.py  config.py  executor.py  path.py  printer.py  problems.py  runtime_context.py  solution_debugger.py  solution_runner.py  test_runner.py  trainer.py  version.py
src/engine/: CMakeLists.txt  common.cc  common.h  database_adapter.cc  database_adapter.h  engine.cc  engine.h  result_checker.cc  result_checker.h  solution_runner.cc  solution_runner.h  table_loader.cc  table_loader.h  table_manager.cc  table_manager.h
src/include/: extproc.h  sqlcli.h  sqlcli_ext.h  sqlcli_odbc.h  sqlcli_types.h  sqlcli_ucode.h  stat_struct.h  stat_struct_v1.h  stat_type.h  stat_type_v1.h  svr_stat.h  svr_stat_v1.h  tb_exdt.h  tbutil.h  tbutil_cdecl.h  tli.h  xa.h
src/server/: CMakeLists.txt  common.h  database_adapter.cc  database_adapter.h  database_connector.cc  database_connector.h  database_loader.cc  database_loader.h  main.cc  message.cc  message.h  problem_loader.cc  problem_loader.h  run_test.cc  run_test.h  server.cc  server.h  solution_runner.cc  solution_runner.h  table.cc  table.h  test.cc  test.h  test_result.h  worker.cc  worker.h
src/server/unit_tests/: CMakeLists.txt
src/solution/: CMakeLists.txt  solution.cc  solution.h
src/tests/: CMakeLists.txt  database_adapter_test.cc  database_connector_test.cc  problem_loader_test.cc  result_checker_test.cc  solution_runner_test.cc  table_loader_test.cc  table_manager_test.cc
