include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

file(GLOB_RECURSE TRAINER_SOLFRWK_SOURCE_FILES LIST_DIRECTORIES false *.cc)
set(TRAINER_SOLFRWK_SOURCE ${TRAINER_SOLFRWK_SOURCE_FILES})
set(TRAINER_SOLFRWK_LIBRARY solfrwk)
add_library(${TRAINER_SOLFRWK_LIBRARY} ${TRAINER_SOLFRWK_SOURCE})