include_directories(${CMAKE_CURRENT_SOURCE_DIR})

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

file(GLOB_RECURSE TRAINER_SOLUTION_SOURCE_FILES LIST_DIRECTORIES false *.cc)
set(TRAINER_SOLUTION_SOURCE ${TRAINER_SOLUTION_SOURCE_FILES})
set(TRAINER_SOLUTION_LIBRARY solutions)
add_library(${TRAINER_SOLUTION_LIBRARY} ${TRAINER_SOLUTION_SOURCE})