set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

file(GLOB_RECURSE TRAINER_SERVER_SOURCE_FILES LIST_DIRECTORIES false *.h *.cc)
set(TRAINER_SERVER_SOURCE ${TRAINER_SERVER_SOURCE_FILES})
set(TRAINER_SERVER_LIBRARY server)
add_library(${TRAINER_SERVER_LIBRARY} ${TRAINER_SERVER_SOURCE})

if (BUILD_UNIT_TESTS)
  add_subdirectory(unit_tests)
endif()
